--- a/tools/version.hpp.in
+++ b/tools/version.hpp.in
@@ -4,3 +4,4 @@
 #define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
 #define GIT_COMMIT_DATE "@GIT_COMMIT_DATE@"
 #define BUILD_TYPE "@BUILD_TYPE@"
+#define BUILD_DATE "@BUILD_DATE@"
