--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -2,35 +2,36 @@ name: larch-dev
 channels:
   - conda-forge
   - bioconda
-  - defaults
 dependencies:
-  # larch
+  # larch: build time
+  - python
+  - gcc >=12.4.0,<14.0.0
+  - gxx >=12.4.0,<14.0.0
   - cmake=3.19.6
   - make
-  - cxx-compiler
-  - openmpi
-  - openmpi-mpicc
-  - openmpi-mpicxx
-  - boost-cpp=1.76
+  - openmpi-mpicc >=4.1.0,<5.0
+  - openmpi-mpicxx >=4.1.0,<5.0
   - automake
   - autoconf
   - libtool
   - yasm
-  - zlib
-  - ucx
-  - cuda-cudart
-  - git-lfs
+  - openssh
+  - protobuf =3.12.3
+  # larch: run time
+  - openmpi >=4.1.0,<5.0
+  - boost-cpp =1.76
+  - ucx >=1.16.0
+  - zlib >=1.2
   # development
   - git
+  - git-lfs
   - mafft
   - python
   - rsync
   - wget
-  - openssh
   - gdb
   - bzip2
   - backports.lzma
-  - protobuf=3.12.3
   # conda packaging
   - conda-build
   - conda-verify
